Added basic games operations